--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-reanimated-swipeable",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "description": "A performant and configurable swipeable row using Reanimated and React Native Gesture Handler",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
@@ -156,5 +156,9 @@
         }
       ]
     ]
+  },
+  "dependencies": {
+    "react-native-gesture-handler": "^2.12.0",
+    "react-native-reanimated": "^3.3.0"
   }
 }
