--- a/example/package.json
+++ b/example/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-native-reanimated-swipeable-example",
+  "name": "example",
+  "main": "index.js",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -13,14 +13,10 @@
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
-    "react-dom": "18.2.0",
-    "react-native-web": "~0.19.6"
+    "react-native-reanimated-swipeable": "^1.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "babel-plugin-module-resolver": "^5.0.0",
-    "@expo/webpack-config": "^18.0.1",
-    "babel-loader": "^8.1.0"
+    "@babel/core": "^7.20.0"
   },
   "private": true
 }
