--- a/example/package.json
+++ b/example/package.json
@@ -13,7 +13,9 @@
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
-    "react-native-reanimated-swipeable": "^1.0.2"
+    "react-native-reanimated-swipeable": "^1.0.4",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-gesture-handler": "~2.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
