--- a/example/package.json
+++ b/example/package.json
@@ -14,7 +14,7 @@
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-reanimated-swipeable": "^1.0.4",
-    "react-native-reanimated": "~3.3.0",
+    "react-native-reanimated": "^3.5.4",
     "react-native-gesture-handler": "~2.12.0"
   },
   "devDependencies": {
