--- a/package.json
+++ b/package.json
@@ -68,7 +68,9 @@
     "react-native": "0.72.6",
     "react-native-builder-bob": "^0.23.1",
     "release-it": "^15.0.0",
-    "typescript": "^5.0.2"
+    "typescript": "^5.0.2",
+    "react-native-reanimated": "^3.3.0",
+    "react-native-gesture-handler": "^2.13.4"
   },
   "resolutions": {
     "@types/react": "17.0.21"
@@ -156,9 +158,5 @@
         }
       ]
     ]
-  },
-  "dependencies": {
-    "react-native-gesture-handler": "^2.12.0",
-    "react-native-reanimated": "^3.3.0"
   }
 }
