--- a/package.json
+++ b/package.json
@@ -67,10 +67,10 @@
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-builder-bob": "^0.23.1",
-    "release-it": "^15.0.0",
-    "typescript": "^5.0.2",
+    "react-native-gesture-handler": "^2.13.4",
     "react-native-reanimated": "^3.3.0",
-    "react-native-gesture-handler": "^2.13.4"
+    "release-it": "^15.0.0",
+    "typescript": "^5.0.2"
   },
   "resolutions": {
     "@types/react": "17.0.21"
