--- a/package.json
+++ b/package.json
@@ -77,7 +77,9 @@
   },
   "peerDependencies": {
     "react": "*",
-    "react-native": "*"
+    "react-native": "*",
+    "react-native-reanimated":  "^3.3.0",
+    "react-native-gesture-hanler": "^2.12.0"
   },
   "workspaces": [
     "example"
